Fix in search#index style

--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -97,7 +97,7 @@
 							 placeholder="Busque por rock, feira de rua, samba, standup..."
 							 type="text"
 							 data-search-target="input">
-				<input class="px-4 my-1 ml-3 h-10 font-light font-semibold text-white rounded cursor-pointer bg-brand-500 md:hidden"
+				<input class="px-4 my-1 ml-3 h-10 font-light font-medium text-white rounded cursor-pointer bg-brand-600 md:hidden"
 							 type="submit" value="Buscar"
 							 data-search-target="submit"
 							 data-action="click->search#searching"/>
