--- a/web/app/components/follow_button_component.html.erb
+++ b/web/app/components/follow_button_component.html.erb
@@ -1,15 +1,20 @@
-<%= content_tag :div, id: dom_id(@followable, 'follow-button') do %>
-	<div class="<%= helpers.class_names('text-sm cursor-pointer duration-100 h-content inline-flex items-center pl-1 pr-3 py-1 rounded-full select-none tap-highlight-none transform transition-transform',
-																			{ 'bg-brand-500 text-white':     @user&.follow?(@followable),
-																				'bg-brand-100 text-brand-600': !@user&.follow?(@followable) }) %>"
+<%= content_tag :div, id: dom_id(@followable, 'follow-button'), class: 'inline' do %>
+	<div class="<%= helpers.class_names('cursor-pointer duration-100 font-medium h-content items-center md:hover:text-brand-600 select-none tap-highlight-none text-sm transform transition-transform',
+																			{ 'text-brand-600':                                                                                               @user&.follow?(@followable) || (!@user&.follow?(@followable) && @type == 'text'),
+																				'bg-brand-100':                                                                                                 @user&.follow?(@followable) && @type == 'button',
+																				'text-gray-800 border':                                                                                         !@user&.follow?(@followable) && @type == 'button',
+																				'inline-flex pl-1 pr-3 py-1.5 rounded-full md:hover:bg-brand-100 md:hover:border-brand-100 md:hover:scale-105': @type == 'button',
+																				'inline':                                                                                                       @type == 'text'
+																			}) %>"
 			 data-reflex="<%= "click->#{@followable.class.name}#follow" %>"
 			 data-followable-id="<%= @followable.id %>"
+			 data-type="<%= @type %>"
 			 id="<%= "follow-button_#{@followable.id}" %>">
-		<svg class="<%= helpers.class_names('fill-current h-4 hover:scale-150 px-1',
-																				{ 'text-white':     @user&.follow?(@followable),
-																					'text-brand-500': !@user&.follow?(@followable) }) %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"/>
-		</svg>
+		<% if @type == 'button' %>
+			<svg class="fill-current h-4 px-1" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"/>
+			</svg>
+		<% end %>
 		<span>
 		<%= @user&.follow?(@followable) ? 'Seguindo' : 'Seguir' %>
 	</span>
