--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -56,6 +56,7 @@
  ]
 }
 
+
 </script>
 
 <script type="application/ld+json">
@@ -97,6 +98,7 @@
     "validFrom": "<%= @event.ld_json.valid_from %>"
   }
 }
+
 </script>
 
 <%= render Modal::SignInComponent.new(text: nil) %>
@@ -162,6 +164,12 @@
 												onerror: "this.style.opacity='0'" rescue nil %>
 					<div>
 						<%= organizer.details_name %>
+						·
+						<%= render(FollowButtonComponent.new(
+							user:       current_user,
+							followable: organizer,
+							type:       'text'
+						)) %>
 					</div>
 				<% end %>
 			<% end %>
@@ -182,7 +190,7 @@
 															} do %>
 										<%= image_tag shrine_image_url(similar_event, :feed), {
 											loading: :lazy,
-											class:   'cursor-pointer h-full object-center object-cover w-full overflow-hidden',
+											class:   'bg-gray-100 cursor-pointer h-full object-center object-cover w-full overflow-hidden',
 											onerror: "this.style.opacity='0'"
 										} rescue nil %>
 									<% end %>
