--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -12,7 +12,7 @@
 <!--<turbo-frame id="movie">-->
 <% cache [@movie, @movie&.screenings&.max, DateTime.now.day] do %>
 	<section class="mx-auto mt-12 max-w-screen-lg">
-		<div class="flex flex-col mb-32 min-h-screen">
+		<div class="flex flex-col mb-32">
 			<div class="flex flex-col justify-center md:flex-row md:mx-auto md:w-8/12">
 				<%= image_tag shrine_image_url(@movie, :medium), {
 					loading: :lazy,
