--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -13,6 +13,9 @@
   [
     <%= render partial: 'layouts/json_ld', collection: @events, as: :event %>
   ]
+
+
+
 	</script>
 
 	<div class="grid grid-cols-12 gap-0 mx-auto max-w-screen-lg md:gap-10">
@@ -41,7 +44,13 @@
 		<div class="col-span-12 space-y-12 md:col-span-8">
 			<div class="overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
 				<h2 class="px-5 pb-2 c-h2">Próximos eventos</h2>
-				<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user %>
+				<% if @upcoming_events.present? %>
+					<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user %>
+				<% else %>
+					<div class="px-5">
+						Sem eventos para os próximos dias
+					</div>
+				<% end %>
 			</div>
 
 			<% if @past_events.present? %>
