--- a/web/app/components/main_sidebar/filter_component.html.erb
+++ b/web/app/components/main_sidebar/filter_component.html.erb
@@ -29,15 +29,15 @@
 			</div>
 		<% end %>
 		<% unless filters_present? %>
-			<a href="<%= root_path theme: 'entretenimento-lazer' %>" data-turbo-preserve-scroll="true" class="<%= helpers.class_names({ 'c-chip--active': !params[:theme] || params[:theme] == 'entretenimento-lazer',
-																																																																	'c-chip':         params[:theme] && params[:theme] != 'entretenimento-lazer' }) %>">
+			<a href="<%= root_path theme: 'entretenimento-lazer' %>" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('font-medium', { 'c-chip--active': !params[:theme] || params[:theme] == 'entretenimento-lazer',
+																																																																								 'c-chip':         params[:theme] && params[:theme] != 'entretenimento-lazer' }) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="mr-2 w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z"/>
 				</svg>
 				Entretenimento
 			</a>
-			<a href="<%= root_path theme: 'trabalho-educacao' %>" data-turbo-preserve-scroll="true" class="<%= helpers.class_names({ 'c-chip--active': params[:theme] == 'trabalho-educacao',
-																																																															 'c-chip':         params[:theme] != 'trabalho-educacao' }) %>">
+			<a href="<%= root_path theme: 'trabalho-educacao' %>" data-turbo-preserve-scroll="true" class="<%= helpers.class_names('font-medium', { 'c-chip--active': params[:theme] == 'trabalho-educacao',
+																																																																							'c-chip':         params[:theme] != 'trabalho-educacao' }) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
 				</svg>
