--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -13,9 +13,6 @@
   [
     <%= render partial: 'layouts/json_ld', collection: @events, as: :event %>
   ]
-
-
-
 	</script>
 
 	<div class="grid grid-cols-12 gap-0 mx-auto max-w-screen-lg md:gap-10">
@@ -45,7 +42,7 @@
 			<div class="overflow-hidden mx-auto space-y-3 is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
 				<h2 class="px-5 pb-2 c-h2">Próximos eventos</h2>
 				<% if @upcoming_events.present? %>
-					<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user %>
+					<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user, pagy: @pagy %>
 				<% else %>
 					<div class="px-5">
 						Sem eventos para os próximos dias
