--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -52,7 +52,7 @@
 			<div class="mx-auto space-y-3 md:max-w-screen-sm sm:container">
 				<h2 class="px-5 pb-2 c-h2">Próximos eventos</h2>
 				<% if @upcoming_events.present? %>
-					<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user %>
+					<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user, pagy: @pagy %>
 				<% else %>
 					<div class="px-5">
 						Sem eventos para os próximos dias
