--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,7 +1,7 @@
 <%= render Modal::SignInComponent.new(text: nil) %>
 
 <div id="main-content" class="gap-16 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
-	<section id="main-sidebar" class="pt-12 space-y-16 col-span-8 md:col-span-5">
+	<section id="main-sidebar" class="col-span-8 pt-12 space-y-16 md:col-span-5">
 
 		<% if notice %>
 			<div class="flex items-center p-3 mx-4 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 text-brand-600">
@@ -18,13 +18,13 @@
 		<% end %>
 		<% unless params[:day] || params[:category] %>
 			<% unless current_user %>
-				<div id="hero__presentation" data-turbo-permanent class="-my-5 bg-brand-100 flex flex-row-reverse gap-4 items-center md:bg-transparent md:flex md:flex-row md:items-start md:mx-0 md:my-0 md:px-5 mx-5 p-3 rounded-lg select-none tap-highlight-none" style="min-height: <%= mobile_device? ? '110px' : '150px' %>">
+				<div id="hero__presentation" data-turbo-permanent class="flex flex-row-reverse gap-4 items-center p-3 mx-5 -my-5 rounded-lg select-none bg-brand-100 md:bg-transparent md:flex md:flex-row md:items-start md:mx-0 md:my-0 md:px-5 tap-highlight-none" style="min-height: <%= mobile_device? ? '110px' : '150px' %>">
 					<div class="md:mr-12">
-						<h2 class="font-semibold leading-snug text-gray-800 md:font-bold md:text-3xl md:text-gray-800">
-							Eventos e Cinema em Porto Alegre
+						<h2 class="text-lg font-semibold leading-snug text-gray-800 md:font-bold md:text-3xl md:text-gray-800">
+							Eventos e cinema em Porto Alegre
 						</h2>
-						<span class="block c-span leading-tight md:inline-block md:leading-normal md:text-base mt-2 text-xs">
-    						Descubra eventos e siga seus locais e artistas favoritos para não perder nada que acontece na cidade.
+						<span class="block mt-2 text-xs leading-tight c-span md:inline-block md:leading-normal md:text-base">
+    						Descubra eventos e siga seus locais favoritos para não perder nada que acontece na cidade.
     					</span>
 					</div>
 					<%= image_pack_tag ["hero/bebendo.png", "hero/dancando.png", "hero/skate.png"].sample, class: 'h-24 md:h-36 md:w-36 my-auto w-24' %>
@@ -40,7 +40,7 @@
 				<div class="bg-white">
 					<% if params[:category] %>
 						<div class="flex justify-between items-center pr-5 md:pr-10">
-							<h2 class="px-5 c-h2 mb-3">
+							<h2 class="px-5 mb-3 c-h2">
 								<span class="underline text-brand-600"><%= @category&.details_display_name&.titleize %></span>
 								em
 								Porto Alegre
@@ -78,11 +78,11 @@
 					 class="sticky top-28 z-10">
 				<div id="open-event"
 						 data-loader-target="loaded"
-						 class="bg-white relative z-20 w-96">
+						 class="relative z-20 w-96 bg-white">
 					<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
 				</div>
 				<div
-					class="hidden border flex font-display h-screen-8/10 items-center justify-center left-0 mt-10 overscroll-contain rounded-xl shadow-lg text-2xl text-gray-800 w-96"
+					class="flex hidden overscroll-contain left-0 justify-center items-center mt-10 w-96 text-2xl text-gray-800 rounded-xl border shadow-lg font-display h-screen-8/10"
 					data-loader-target="loading"
 					style="">
 					Carregando
