--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -101,7 +101,7 @@
 
 </script>
 
-<%= render Modal::SignInComponent.new(text: nil) %>
+<%= render ModalComponent.new %>
 
 <% if already_happened? @event %>
 	<div class="flex items-center p-5 mx-4 mt-1 mb-3 space-x-2 max-w-screen-lg font-semibold rounded-lg border bg-brand-100 border-brand-200 md:mb-0 md:mt-5 md:mx-auto text-brand-600">
