--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -103,6 +103,8 @@
 							 data-action="click->search#searching"/>
 			</form>
 		</div>
+	<% else %>
+	<div class="hidden md:col-span-3 md:inline-block"></div>
 	<% end %>
 	<div class="hidden md:inline-block md:col-span-3">
 		<div class="flex justify-end items-center h-full">
