--- a/web/app/components/modal_component.html.erb
+++ b/web/app/components/modal_component.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, id: 'modal', data: { controller: 'modal--sign-in' } do %>
+<%= content_tag :div, id: 'modal', data: { controller: 'modal' } do %>
 	<% if @opened %>
 
 		<div class="fixed z-50 inset-0 overflow-y-auto">
@@ -13,7 +13,7 @@
 						From: "opacity-100"
 						To: "opacity-0"
 				-->
-				<div data-action="click->modal--sign-in#close" class="fixed inset-0 transition-opacity" aria-hidden="true">
+				<div data-action="click->modal#close" class="fixed inset-0 transition-opacity" aria-hidden="true">
 					<div class="absolute inset-0 bg-gray-500 opacity-75"></div>
 				</div>
 
@@ -40,19 +40,25 @@
 							</div>
 							<div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
 								<h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
-									Você precisa de uma conta
+									<%= @title %>
 								</h3>
 								<div class="mt-2">
 									<p class="text-sm text-gray-500">
-										<%= @text || element['data-text'].html_safe %>
+										<%= @text %>
 									</p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-						<%= content_tag :a, href: new_user_registration_path, class: 'bg-brand-500 cursor-pointer focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 font-medium hover:bg-brand-600 inline-flex justify-center mt-3 px-4 py-2 rounded-md shadow-sm sm:ml-3 sm:mt-0 sm:text-sm sm:w-auto text-base text-white w-full', data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' } do %>
-							Criar conta
+						<% if @action == 'create-account' %>
+							<%= content_tag :a, href: new_user_registration_path, class: 'bg-brand-600 cursor-pointer focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 font-medium hover:bg-brand-500 inline-flex justify-center mt-3 px-4 py-2 rounded-md shadow-sm sm:ml-3 sm:mt-0 sm:text-sm sm:w-auto text-base text-white w-full', data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' } do %>
+								Criar conta
+							<% end %>
+						<% else %>
+							<div data-action="click->modal#close" class="bg-brand-600 cursor-pointer focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 font-medium hover:bg-brand-500 inline-flex justify-center mt-3 px-4 py-2 rounded-md shadow-sm sm:ml-3 sm:mt-0 sm:text-sm sm:w-auto text-base text-white w-full">
+								Entendi
+							</div>
 						<% end %>
 					</div>
 				</div>
