--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<%= render Modal::SignInComponent.new(text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
+<%= render ModalComponent.new(action: 'create-account', title: 'Você precisa estar logado', text: 'Crie uma conta para salvar seus eventos favoritos e receber recomendações únicas 🤙') %>
 
 <section class="mb-24 min-h-screen is-animated md:mt-16">
 
