--- a/web/app/components/calendar/horizontal_event_component.html.erb
+++ b/web/app/components/calendar/horizontal_event_component.html.erb
@@ -1,57 +1,70 @@
-<%= content_tag :div, id: dom_id(@event), data: { controller: 'calendar--horizontal-event', 'calendar--horizontal-event-open-in-sidebar': @open_in_sidebar }, class: 'relative last:z-10' do %>
+<%= content_tag :div, id: dom_id(@likeable), data: { controller: 'calendar--horizontal-event', 'calendar--horizontal-event-open-in-sidebar': @open_in_sidebar }, class: 'relative last:z-10' do %>
 	<div class="select-none tap-highlight-none bg-white border-gray-100 flex justify-between md:border mt-2 mx-2 md:mx-0 px-3 md:px-5 py-3 rounded-lg">
 		<div class="pr-6">
-			<%= content_tag :a,
-											href:  event_path(@event),
-											data:  {
-												'turbo-preserve-scroll': true,
-												action:                  'click->calendar--horizontal-event#openEvent',
-												'event-id':              @event.id
-											},
-											class: 'c-h3' do %>
-				<%= @event.name %>
+			<% if @likeable.class == Event %>
+				<%= content_tag :a,
+												href:  event_path(@likeable),
+												data:  {
+													'turbo-preserve-scroll': true,
+													action:                  'click->calendar--horizontal-event#openEvent',
+													'event-id':              @likeable.id
+												},
+												class: 'c-h3' do %>
+					<%= @likeable.name %>
+				<% end %>
+			<% else %>
+				<%= link_to movie_path(@likeable.movie), 'data-turbo-preserve-scroll': true, class: 'c-h3' do %>
+					<%= @likeable.name %>
+				<% end %>
 			<% end %>
 			<div class="text-sm md:text-xs md:mt-2 text-gray-500">
-				<%= helpers.day_of_week(@event.start_time).titlecase %> às <%= helpers.format_hour @event.start_time %>h ·
-				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:underline' %>
+				<% if @likeable.class == Event %>
+					<%= helpers.day_of_week(@likeable.start_time).titlecase %> às <%= helpers.format_hour @likeable.start_time %>h
+					·
+				<% else %>
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 inline" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm3 2h6v4H7V5zm8 8v2h1v-2h-1zm-2-2H7v4h6v-4zm2 0h1V9h-1v2zm1-4V5h-1v2h1zM5 5v2H4V5h1zm0 4H4v2h1V9zm-1 4h1v2H4v-2z" clip-rule="evenodd"/>
+					</svg>
+					·
+					<%= helpers.day_of_week(@likeable.start_time).titlecase %> às <%= helpers.format_hour @likeable.start_time %>h
+				<% end %>
+				<%= link_to helpers.limit_place_name_size(@likeable.place_details_name, 24), place_path(@likeable.place), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:underline' if @likeable.class == Event %>
 			</div>
 			<div class="flex mt-2">
-				<% unless @user&.dislike?(@event) %>
-					<%= content_tag :div,
-													id:    dom_id(@event, :like),
-													data:  {
-														action:     'click->calendar--horizontal-event#like',
-														'event-id': @event.id,
-														component:  'horizontal-event'
-													},
-													class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform',
-																										 { 'bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@event) }) do %>
-						<svg class="<%= helpers.class_names 'group h-5 w-5 stroke-current',
-																								{ 'text-gray-500':               !@user&.like?(@event),
-																									'text-brand-600 fill-current': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
-						</svg>
-						<span class="<%= helpers.class_names('ml-1', { 'text-gray-500':  !@user&.like?(@event),
-																													 'text-brand-600': @user&.like?(@event) }) %>">
-							<%= @user&.like?(@event) ? 'Salvo' : 'Salvar' %>
+				<%= content_tag :div,
+												id:    dom_id(@likeable, :like),
+												data:  {
+													action:          'click->calendar--horizontal-event#unlike',
+													'likeable-id':   @likeable.id,
+													'likeable-type': @likeable.class.table_name.singularize
+												},
+												class: helpers.class_names('mr-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform',
+																									 { 'bg-brand-100 px-2 py-1 -mt-1': @user&.like?(@likeable) }) do %>
+					<svg class="<%= helpers.class_names 'group h-5 w-5 stroke-current',
+																							{ 'text-gray-500':               !@user&.like?(@likeable),
+																								'text-brand-600 fill-current': @user&.like?(@likeable) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
+					</svg>
+					<span class="<%= helpers.class_names('ml-1', { 'text-gray-500':  !@user&.like?(@likeable),
+																												 'text-brand-600': @user&.like?(@likeable) }) %>">
+							<%= @user&.like?(@likeable) ? 'Salvo' : 'Salvar' %>
 						</span>
-					<% end %>
 				<% end %>
 			</div>
 		</div>
 		<div>
 			<div data-controller="ripple" class="h-20 md:h-24 md:w-40 mt-3 overflow-hidden relative ripple ripple-white rounded-lg shadow w-32">
-				<%= link_to event_path(@event),
+				<%= link_to event_path(@likeable),
 										data: {
 											'turbo-preserve-scroll': true,
 											action:                  'click->calendar--horizontal-event#openEvent',
-											'event-id':              @event.id
+											'event-id':              @likeable.id
 										} do %>
-					<%= image_tag helpers.shrine_image_url(@event, :feed), {
+					<%= image_tag helpers.shrine_image_url(@likeable, :feed), {
 						loading: :lazy,
-						alt:     "Cartaz do evento #{@event.name}",
+						alt:     "Cartaz do evento #{@likeable.name}",
 						data:    {
-							'event-id': @event.id
+							'event-id': @likeable.id
 						},
 						class:   'cursor-pointer object-center object-cover h-full w-full',
 						onerror: "this.style.opacity='0'"
