--- a/web/app/components/calendar_component.html.erb
+++ b/web/app/components/calendar_component.html.erb
@@ -3,7 +3,7 @@
 		<div data-calendar-target="calendar" class="calendar bg-white mb-5 mb:bg-transparent md:mb-2 md:mx-0 md:py-3 md:rounded-lg md:shadow-none md:text-center py-2 rounded-lg select-none tap-highlight-none text-center">
 			<div class="capitalize flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
 				<div class="flex items-center">
-				<span class="font-display ml-4 mr-2 text-2xl text-brand-500">
+				<span class="c-h2 px-5 mt-5">
 					<%= t('date.month_names')[start_date.month] %> <%= start_date.year %>
 				</span>
 					<svg data-calendar-target="loadingIcon" class="opacity-0 text-brand-600 w-7 h-7 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
