--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -7,8 +7,7 @@
 								class: 'transition-opacity group' do %>
 	<div class="flex bg-white select-none tap-highlight-none">
 		<div>
-			<div data-controller="ripple"
-					 class="relative w-24 h-16 rounded-lg shadow bg-brand-100 md:h-28 md:w-48 ripple ripple-white"
+			<div class="relative w-24 h-16 rounded-lg shadow bg-brand-100 md:h-28 md:w-48"
 					 style="background-color: <%= helpers.get_image_dominant_color(@event) %>">
 				<%= link_to event_path(@event),
 										data: {
@@ -35,7 +34,7 @@
 			<div class="inline items-center text-sm md:flex md:space-x-2">
 				<span class="hidden -space-x-2 md:flex">
 					<% @event.organizers[0...1].each do |organizer| %>
-						<%= link_to organizer_path(organizer), class: 'inline-block' do %>
+						<%= link_to organizer_path(organizer), class: 'inline-block', 'data-turbo-preserve-scroll': true do %>
 							<%= image_tag helpers.shrine_image_url(organizer, :sm), {
 								loading: :lazy,
 								title:   organizer.details_name,
@@ -113,7 +112,6 @@
 						</span>
 					<% end %>
 				<% end %>
-
 				<div class="<%= helpers.class_names('hidden md:flex md:group-hover:opacity-100 md:opacity-0 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 text-gray-500 hover:text-brand-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform hover:bg-brand-100 px-2 py-1',
 																						{ 'ml-2': !@user&.like?(@event) }) %>"
 						 data-controller="share-button"
