--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -2,7 +2,6 @@
 
 <div id="main-content" class="gap-16 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
 	<section id="main-sidebar" class="col-span-8 pt-12 space-y-16 md:col-span-5">
-
 		<% if notice %>
 			<div class="flex items-center p-3 mx-4 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 text-brand-600">
 				<div class="flex flex-shrink-0 justify-center items-center mx-auto w-12 h-12 rounded-full bg-brand-100 sm:h-10 sm:w-10">
@@ -95,7 +94,11 @@
 					</svg>
 				</div>
 			</div>
-			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, start_date: Date.today, user: current_user, filter: false, indicators: @indicators) %>
+			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events,
+																										start_date: Date.today,
+																										user: current_user,
+																										filter: false,
+																										indicators: @indicators) %>
 		</section>
 	<% end %>
 
