--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -1,5 +1,10 @@
 <% content_for :meta_title, "Filme #{@movie.title} nos cinemas de Porto Alegre - RS" %>
+<% content_for :back_button, true %>
+<% content_for :top_app_bar_title, truncate(@movie.title, length: 30) %>
+
 <%= notice %>
+
+<%= render(ModalComponent.new) %>
 
 <!--<turbo-frame id="movies" target="movie">-->
 <% cache ['movies', @movies&.map(&:id), @movies&.max&.updated_at&.to_i] do %>
@@ -10,53 +15,54 @@
 <!--</turbo-frame>-->
 
 <!--<turbo-frame id="movie">-->
-<% cache [@movie, @movie&.screenings&.max, DateTime.now.day] do %>
-	<section class="mx-auto mt-12 max-w-screen-lg">
-		<div class="flex flex-col mb-32">
-			<div class="flex flex-col justify-center md:flex-row md:mx-auto md:w-8/12">
-				<%= image_tag shrine_image_url(@movie, :medium), {
-					loading: :lazy,
-					title:   @movie.title,
-					alt:     "Filme #{@movie.title}",
-					class:   'h-content bg-gray-100 md:mr-10 object-cover rounded-lg shadow-lg w-32 mx-auto',
-					style:   'min-height: 195px; min-width: 128px',
-					onerror: "this.style.opacity='0'"
-				} rescue nil %>
-				<div class="flex flex-col items-center mt-6 space-y-3 md:items-start md:mt-2">
-					<div class="flex flex-col items-center md:flex-row md:items-center md:justify-between md:w-full">
-						<div class="text-center md:text-left">
-							<h1 class="c-h2">
-								<%= @movie.title %>
-							</h1>
-							<div class="text-sm italic">
-								<%= @movie&.genres&.join(", ") %>
-							</div>
+<%# cache [@movie, @movie&.screenings&.max, DateTime.now.day] do %>
+<section class="mx-auto mt-12 max-w-screen-lg">
+	<div class="flex flex-col mb-32">
+		<div class="flex flex-col justify-center md:flex-row md:mx-auto md:w-8/12">
+			<%= image_tag shrine_image_url(@movie, :medium), {
+				loading: :lazy,
+				title:   @movie.title,
+				alt:     "Filme #{@movie.title}",
+				class:   'h-content bg-gray-100 md:mr-10 object-cover rounded-lg shadow-lg w-32 mx-auto',
+				style:   'min-height: 195px; min-width: 128px',
+				onerror: "this.style.opacity='0'"
+			} rescue nil %>
+			<div class="flex flex-col items-center mt-6 space-y-3 md:items-start md:mt-2">
+				<div class="flex flex-col items-center md:flex-row md:items-center md:justify-between md:w-full">
+					<div class="text-center md:text-left">
+						<h1 class="c-h2">
+							<%= @movie.title %>
+						</h1>
+						<div class="text-sm italic">
+							<%= @movie&.genres&.join(", ") %>
 						</div>
-						<% if @movie.trailer %>
-							<a href="<%= @movie.trailer %>" rel="nofollow" target="_blank" class="inline-block mt-3 text-center md:mt-0">
-								<div class="flex items-center py-1 px-2 text-gray-600 rounded-full border transition-transform hover:scale-105 md:transform border-brand-300 w-content">
-									<svg xmlns="http://www.w3.org/2000/svg" class="mr-1 w-5 h-5 fill-current text-brand-600" viewBox="0 0 20 20" fill="currentColor">
-										<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"/>
-									</svg>
-									<span class="font-semibold text-brand-600">
+					</div>
+					<% if @movie.trailer %>
+						<a href="<%= @movie.trailer %>" rel="nofollow" target="_blank" class="inline-block mt-3 text-center md:mt-0">
+							<div class="flex items-center py-1 px-2 text-gray-600 rounded-full border transition-transform hover:scale-105 md:transform border-brand-300 w-content">
+								<svg xmlns="http://www.w3.org/2000/svg" class="mr-1 w-5 h-5 fill-current text-brand-600" viewBox="0 0 20 20" fill="currentColor">
+									<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"/>
+								</svg>
+								<span class="font-semibold text-brand-600">
 										Ver trailer
 									</span>
-								</div>
-							</a>
-						<% end %></div>
-					<div class="mx-auto w-11/12 text-sm leading-relaxed text-center text-gray-800 md:text-left md:w-full">
-						<%= @movie.description %>
-					</div>
+							</div>
+						</a>
+					<% end %></div>
+				<div class="mx-auto w-11/12 text-sm leading-relaxed text-center text-gray-800 md:text-left md:w-full">
+					<%= @movie.description %>
 				</div>
 			</div>
+		</div>
 
-			<div class="grid grid-cols-12 grid-flow-col gap-0 px-5 mt-20 max-w-screen-lg md:gap-10 md:px-0">
-				<div class="col-span-12 mx-auto space-y-24 md:col-span-9">
-					<% @movie.screenings&.includes(:cinema)&.order("day ASC")&.group_by { |s| [s.cinema&.display_name, s.cinema&.google_id] }.each_with_index do |cinema_name_group, index| %>
-						<% if cinema_name_group[1].any? { |s| s.day.to_date >= Date.current } %>
-							<div class="">
-								<div class="grid grid-cols-4">
-									<div class="col-span-3 pr-5 mb-3 text-sm">
+		<div class="grid grid-cols-12 grid-flow-col gap-0 px-5 mt-20 max-w-screen-lg md:gap-10">
+			<div class="col-span-12 mx-auto space-y-6 md:space-y-12 md:col-span-9">
+				<% @movie.screenings&.includes(:cinema)&.group_by { |s| [s.cinema&.display_name, s.cinema&.google_id] }.each_with_index do |cinema_name_group, index| %>
+					<% if cinema_name_group[1].any? { |s| s.day.to_date >= Date.current } %>
+						<div class="bg-gray-50 p-3 rounded-md">
+							<div class="grid grid-cols-4">
+								<div class="col-span-3 pr-5 mb-3 text-sm">
+									<div class="mb-3">
 										<h2 id="<%= cinema_name_group[1][0]&.cinema&.slug %>" class="text-xl font-bold text-gray-800 inline">
 											<%= link_to cinema_name_group[0][0], cinema_path(cinema_name_group[1][0]&.cinema), class: 'inline-block hover:text-brand-600' %>
 										</h2>
@@ -66,90 +72,95 @@
 											followable: cinema_name_group[1][0]&.cinema,
 											type:       'text'
 										)) %>
-										<div class="text-xs text-gray-700">
-											<%= cinema_name_group[1][0]&.cinema&.address %>
-											<% if cinema_name_group[1][0]&.cinema&.neighborhood&.present? %>
-												‧
-												<span class="font-semibold">Bairro próximo:</span> <%= cinema_name_group[1][0]&.cinema&.neighborhood %>
-											<% end %>
-											<% if cinema_name_group[1][0]&.cinema&.reference_place&.present? %>
-												‧
-												<span class="font-semibold">Local:</span> <%= cinema_name_group[1][0]&.cinema&.reference_place %>
-											<% end %>
-											<% if cinema_name_group[1][0]&.cinema&.lower_price&.present? %>
-												‧
-												<span class="font-semibold">Menor preço da inteira:</span> <%= number_to_currency cinema_name_group[1][0]&.cinema&.lower_price, locale: 'pt-BR' %>
-											<% end %>
-											<% if cinema_name_group[1][0]&.cinema&.google_maps&.present? %>
-												‧
-												<a href="<%= cinema_name_group[1][0]&.cinema&.google_maps %>" rel="nofollow" target="_blank" class="font-semibold text-brand-600">Abrir
-													no Google Maps</a>
-											<% end %></div>
 									</div>
-									<div class="flex col-span-1 justify-end items-center">
-										<% if cinema_name_group[1][0]&.cinema&.website&.present? %>
-											<a href="<%= cinema_name_group[1][0]&.cinema&.website %>" rel="nofollow" target="_blank" class="inline-block py-1 px-3 text-xs font-semibold text-center rounded-full transition-transform bg-brand-100 hover:scale-105 md:text-left md:text-sm md:transform text-brand-700">
-												Ver site oficial
-											</a>
+									<div class="text-xs text-gray-700">
+										<%= cinema_name_group[1][0]&.cinema&.address %>
+										<% if cinema_name_group[1][0]&.cinema&.neighborhood&.present? %>
+											‧
+											<span class="font-semibold">Bairro próximo:</span> <%= cinema_name_group[1][0]&.cinema&.neighborhood %>
 										<% end %>
-									</div>
+										<% if cinema_name_group[1][0]&.cinema&.reference_place&.present? %>
+											‧
+											<span class="font-semibold">Local:</span> <%= cinema_name_group[1][0]&.cinema&.reference_place %>
+										<% end %>
+										<% if cinema_name_group[1][0]&.cinema&.lower_price&.present? %>
+											‧
+											<span class="font-semibold">Menor preço da inteira:</span> <%= number_to_currency cinema_name_group[1][0]&.cinema&.lower_price, locale: 'pt-BR' %>
+										<% end %>
+										<% if cinema_name_group[1][0]&.cinema&.google_maps&.present? %>
+											‧
+											<a href="<%= cinema_name_group[1][0]&.cinema&.google_maps %>" rel="nofollow" target="_blank" class="font-semibold text-brand-600">Abrir
+												no Google Maps</a>
+										<% end %></div>
 								</div>
-								<div class="grid grid-cols-1 grid-flow-row gap-1 md:grid-cols-3">
-									<% cinema_name_group[1].filter { |screening| screening.day.to_date >= Date.current }.group_by { |screening| screening.day }.each do |screening_day_group| %>
-										<div class="p-3 bg-gray-100 rounded">
-											<h3 class="inline font-semibold text-gray-800">
-												<%= day_of_week(screening_day_group[0]).titleize %>
-											</h3>
-											<span class="text-xs text-gray-800"><%= screening_day_group[0].strftime('%d/%m/%y') %></span>
-											<div class="space-y-1">
-												<% screening_day_group[1].filter { |s| s.times&.any? }.each do |screening| %>
-													<div class="">
-														<div class="text-xs italic">
-															<%= screening.language %>
-															<span class="text-gray-500 text-xxs"><%= screening.screen_type %></span>
-														</div>
-														<div class="flex flex-wrap mt-1">
-															<% screening.times&.each do |time| %>
-																<div class="py-1 px-2 mr-1 mb-1 text-sm text-gray-800 bg-white rounded-full w-content">
-																	<%= time %>
-																</div>
-															<% end %>
-														</div>
-													</div>
-												<% end %>
-											</div>
-										</div>
+								<div class="flex col-span-1 justify-end items-start">
+									<% if cinema_name_group[1][0]&.cinema&.website&.present? %>
+										<a href="<%= cinema_name_group[1][0]&.cinema&.website %>" rel="nofollow" target="_blank" class="inline-block py-1.5 px-2 text-xs font-medium text-center rounded-full transition-transform bg-brand-100 hover:scale-105 md:text-left md:text-sm md:transform text-brand-700">
+											Ver site oficial
+										</a>
 									<% end %>
 								</div>
 							</div>
+							<div class="grid grid-cols-1 grid-flow-row gap-1 md:grid-cols-3">
+								<% cinema_name_group[1].filter { |screening| screening.day.to_date >= Date.current }.group_by { |screening| screening.day }.each do |screening_day_group| %>
+									<div class="p-3 border rounded bg-white">
+										<h3 class="inline font-semibold text-gray-800">
+											<%= day_of_week(screening_day_group[0]).titleize %>
+										</h3>
+										<span class="text-xs text-gray-800"><%= screening_day_group[0].strftime('%d/%m/%y') %></span>
+										<div class="float-right w-content -mt-1 -mr-2">
+											<%= render(LikesButtonComponent.new(likeable: screening_day_group[1][0], user: current_user)) if screening_day_group[1][0] %>
+										</div>
+										<div class="space-y-1 mt-3">
+											<% screening_day_group[1].filter { |s| s.times&.any? }.each do |screening| %>
+												<div class="">
+													<div class="text-xs">
+														<%= screening.language %>
+														<span class="text-gray-500 text-xxs"><%= screening.screen_type %></span>
+													</div>
+													<div class="flex flex-wrap mt-1">
+														<% screening.times&.each do |time| %>
+															<div class="py-1 px-2 mr-1 mb-1 text-xs text-gray-800 bg-gray-100 rounded-full w-content">
+																<%= time %>
+															</div>
+														<% end %>
+													</div>
+												</div>
+											<% end %>
+										</div>
+									</div>
+								<% end %>
+							</div>
+						</div>
+					<% end %>
+				<% end %>
+				<% if @movie.screenings.filter { |screening| screening&.day&.to_date >= Date.current }&.empty? %>
+					<div class="bg-brand-100 p-5 rounded-md text-sm leading-relaxed text-gray-800">
+						Sem exibições cadastradas na plataforma para este filme. Veja
+						nos <%= link_to 'sites oficiais', cinemas_path, class: 'text-brand-600 font-medium' %> dos cinemas caso
+						acredite que há sessões para este filme.
+					</div>
+				<% end %>
+			</div>
+			<div class="hidden col-span-3 md:block">
+				<div class="">
+					<h4 class="mb-2 text-xl font-bold text-gray-800">Cinemas</h4>
+					<div class="space-y-3">
+						<% @cinemas&.each_with_index do |cinema, index| %>
+							<a data-controller="scroll-to-anchor-link"
+								 data-action="click->scroll-to-anchor-link#scrollTo"
+								 data-turbo="false"
+								 data-scroll-to-anchor-link-url-value="#<%= cinema.slug %>"
+								 class="block text-sm leading-tight cursor-pointer hover:underline">
+								<%= cinema.display_name %>
+							</a>
 						<% end %>
-					<% end %>
-					<% if @movie.screenings.filter { |screening| screening&.day&.to_date >= Date.current }&.empty? %>
-						<div class="bg-brand-100 p-5 rounded-md text-sm leading-relaxed text-gray-800">
-							Sem exibições cadastradas na plataforma para este filme. Veja nos <%= link_to 'sites oficiais', cinemas_path, class: 'text-brand-600 font-medium' %> dos cinemas caso
-							acredite que há sessões para este filme.
-						</div>
-					<% end %>
-				</div>
-				<div class="hidden col-span-3 md:block">
-					<div class="">
-						<h4 class="mb-2 text-xl font-bold text-gray-800">Cinemas</h4>
-						<div class="space-y-3">
-							<% @cinemas&.each_with_index do |cinema, index| %>
-								<a data-controller="scroll-to-anchor-link"
-									 data-action="click->scroll-to-anchor-link#scrollTo"
-									 data-turbo="false"
-									 data-scroll-to-anchor-link-url-value="#<%= cinema.slug %>"
-									 class="block text-sm leading-tight cursor-pointer hover:underline">
-									<%= cinema.display_name %>
-								</a>
-							<% end %>
-						</div>
 					</div>
 				</div>
 			</div>
-
 		</div>
-	</section>
-<% end %>
+
+	</div>
+</section>
+<%# end %>
 <!--</turbo-frame>-->
