--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -130,7 +130,7 @@
 										 class="c-chip">
 										<%= resource.details_name.titleize %>
 										<% if resource.events.active.size > 0 %>
-  									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-5 text-sm bg-white rounded-full">
+  									<span class="-mt-1.5 absolute bg-white h-4 inline-flex items-center justify-center mr-2 right-0 rounded-full text-sm top-0 w-4">
   										<%= resource.events.active.size %>
   									</span>
 										<% end %>
@@ -157,7 +157,7 @@
 										 class="c-chip">
 										<%= resource.details_name.titleize %>
 										<% if resource.events.active.size > 0 %>
-  									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-5 text-sm font-semibold bg-white rounded-full">
+  									<span class="-mt-1.5 absolute bg-white h-4 inline-flex items-center justify-center mr-2 right-0 rounded-full text-sm top-0 w-4">
   										<%= resource.events.active.size %>
   									</span>
 										<% end %>
