--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -92,7 +92,7 @@
 				<!--				</svg>-->
 				<input autocomplete="false"
 							 name="q"
-							 class="py-1 px-4 mx-auto w-full h-10 text-xs font-light rounded-full bg-brand-100 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-brand-500 placeholder-brand-400 focus:placeholder-brand-600"
+							 class="border focus:bg-white focus:border-transparent focus:outline-none focus:placeholder-brand-600 focus:ring focus:ring-brand-500 font-light h-10 mx-auto placeholder-gray-400 px-4 py-1 rounded-full text-xs w-full"
 							 id="text-field-shape-one"
 							 placeholder="Busque por rock, feira de rua, samba, standup..."
 							 type="text"
