--- a/web/app/components/movies_component.html.erb
+++ b/web/app/components/movies_component.html.erb
@@ -6,9 +6,9 @@
 	<% end %>
 	<div class="relative md:px-5 mt-3">
 		<% if @chips %>
-			<div class="flex md:flex-wrap md:px-0 px-5 scrollx">
+			<div class="flex md:flex-wrap md:px-0 md:mb-2 px-5 scrollx">
 				<div class="c-chip--active cursor-default">
-					Todos
+					Todos os filmes
 				</div>
 				<% if @user&.following_cinemas&.any? %>
 					<% @user.following_cinemas.each do |cinema| %>
@@ -21,7 +21,7 @@
 				<% else %>
 					<%= link_to cinemas_path do %>
 						<div class="c-chip" title="Siga cinemas para vê-los aqui">
-							Buscar cinema
+							Ver cinemas
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20" fill="currentColor">
 								<path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"/>
 							</svg>
@@ -33,28 +33,26 @@
 		<div class="relative px-1">
 			<div class="hidden absolute top-0 left-0 z-20 items-center w-2 h-full select-none md:flex bg-x-white-to-transparent">
 				<div data-slider-target="left" data-action="click->slider#left" class="hidden -ml-4 bg-brand-200 cursor-pointer duration-200 hover:bg-brand-600 hover:text-white mt-20 my-auto rounded-full shadow-md text-brand-700 transition-colors">
-					<svg class="p-2 w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
-						<path d="M0 0h24v24H0V0z" fill="none"/>
-						<path d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"/>
+					<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
 					</svg>
 				</div>
 			</div>
 			<div class="hidden absolute top-0 right-0 z-20 items-center w-3 h-full select-none md:flex bg-x-transparent-to-white">
 				<div data-slider-target="right" data-action="click->slider#right" class="-ml-3 bg-brand-200 cursor-pointer duration-200 hover:bg-brand-600 hover:text-white mt-20 my-auto rounded-full shadow-md text-brand-700 transition-colors">
-					<svg class="p-2 w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
-						<path d="M0 0h24v24H0V0z" fill="none"/>
-						<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
+					<svg xmlns="http://www.w3.org/2000/svg" class="p-2 w-10 h-10 fill-current" viewBox="0 0 20 20" fill="currentColor">
+						<path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
 					</svg>
 				</div>
 			</div>
 			<div data-slider-target="scroller"
 					 data-persist-horizontal-scroll-target="scroller"
-					 class="md:border md:px-5 md:py-5 py-2 rounded-lg scrollx">
+					 class="md:border md:px-3 md:py-3 py-2 rounded-lg scrollx">
 				<div class="px-5 md:px-0 grid grid-flow-col gap-2 w-content grid-after-margin">
 					<% @movies.each do |movie| %>
 						<div class="flex flex-col w-24 transition-transform transform group md:hover:scale-105">
 							<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { 'turbo-preserve-scroll': true } do %>
-								<%= image_tag helpers.shrine_image_url(movie, :small), {
+								<%= image_tag helpers.shrine_image_url(movie, :medium), {
 									loading: :lazy,
 									title:   movie.title,
 									alt:     "Filme #{movie.title}",
