--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -4,7 +4,7 @@
 	<section id="main-sidebar" class="col-span-8 pt-12 space-y-16 md:col-span-5">
 		<% if notice %>
 			<div class="flex items-center p-3 mx-4 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 text-brand-600">
-				<div class="flex flex-shrink-0 justify-center items-center mx-auto w-12 h-12 rounded-full bg-brand-100 sm:h-10 sm:w-10">
+				<div class="flex flex-shrink-0 justify-center items-center w-12 h-12 rounded-full bg-brand-100 sm:h-10 sm:w-10">
 					<!-- Heroicon name: exclamation -->
 					<svg class="w-6 h-6 text-brand-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
@@ -43,18 +43,19 @@
 					<% if params[:category] %>
 						<div class="flex justify-between items-center pr-5 md:pr-10">
 							<h2 class="px-5 mb-3 c-h2">
-								<span class="underline text-brand-600"><%= @category&.details_display_name&.titleize %></span>
-								em
-								Porto Alegre
+								Eventos nos próximos dias na categoria:
+								<span class="underline text-brand-600">
+									<%= @category&.details_display_name&.titleize %>
+								</span>
 							</h2>
 						</div>
 					<% elsif params[:day] %>
 						<h2 class="px-5 c-h2">
-							Eventos em Porto Alegre <%= I18n.l params[:day].to_date %>
+							Eventos no dia <%= I18n.l params[:day].to_date %>
 						</h2>
 					<% else %>
 						<h2 class="px-5 c-h2">
-							Eventos em Porto Alegre
+							Eventos nos próximos dias
 						</h2>
 						<%= render MainSidebar::FilterComponent.new(session:           session.id,
 																												params:            params,
@@ -72,8 +73,7 @@
 		</div>
 	</section>
 	<% unless mobile_device? %>
-		<section class="hidden md:inline-block md:col-span-3 md:bg-white"
-						 id="left-sidebar">
+		<section id="left-sidebar" class="hidden md:inline-block md:col-span-3 md:bg-white">
 			<div data-controller="loader"
 					 data-loader-on-loading="horizontal-event#open-event:before"
 					 data-loader-on-loaded="horizontal-event#open-event:success"
@@ -94,10 +94,10 @@
 					</svg>
 				</div>
 			</div>
-			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events,
+			<%= render LeftSidebar::CalendarComponent.new(events:     @liked_events,
 																										start_date: Date.today,
-																										user: current_user,
-																										filter: false,
+																										user:       current_user,
+																										filter:     false,
 																										indicators: @indicators) %>
 		</section>
 	<% end %>
