--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -2,25 +2,6 @@
 
 <%= render ModalComponent.new(action: 'create-account', title: 'Você precisa estar logado', text: 'Crie uma conta para salvar seus eventos favoritos e receber recomendações únicas 🤙') %>
 
-<div data-controller="loader"
-		 data-loader-on-loading="horizontal-event#open-event:before"
-		 data-loader-on-loaded="horizontal-event#open-event:success"
-		 class="sticky top-20 z-10 z-50 px-5 mx-auto">
-	<div id="open-event"
-			 data-loader-target="loaded">
-		<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
-	</div>
-	<div
-		class="flex hidden overscroll-contain fixed top-0 left-0 justify-center items-center w-screen h-screen text-3xl text-gray-800 rounded-xl shadow-lg font-display"
-		data-loader-target="loading"
-		style="background: #abacbfeb">
-		Carregando
-		<svg data-loader-target="onIcon" class="ml-2 w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-			<path fill="none" d="M0 0h24v24H0V0z"/>
-			<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-		</svg>
-	</div>
-</div>
 
 <div id="main-content" class="<%= class_names 'gap-16 grid-cols-8 max-w-screen-lg md:grid min-h-screen mx-auto',
 																							{ 'px-5': !@founded_events } %>">
@@ -40,8 +21,8 @@
 		<% end %>
 		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
 			<%= link_to root_path, class: 'hidden md:inline-block mt-6 px-5' do %>
-				<div class="border border-brand-300 flex hover:bg-brand-200 hover:border-brand-200 items-center px-5 py-3 rounded-full space-x-3 text-brand-600 text-sm">
-					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<div class="c-chip">
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 mr-3 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
 					</svg>
 					<div>Ver todos os eventos em <span class="font-medium">Porto Alegre</span></div>
@@ -73,9 +54,32 @@
 		</div>
 	</section>
 	<% unless mobile_device? %>
-		<section class="hidden md:inline-block md:col-span-3 md:bg-white"
-						 id="left-sidebar">
-			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, start_date: Date.today, user: current_user, filter: false, indicators: @indicators) %>
+		<section id="left-sidebar" class="hidden md:inline-block md:col-span-3 md:bg-white">
+			<div data-controller="loader"
+					 data-loader-on-loading="horizontal-event#open-event:before"
+					 data-loader-on-loaded="horizontal-event#open-event:success"
+					 class="sticky top-28 z-10">
+				<div id="open-event"
+						 data-loader-target="loaded"
+						 class="relative z-20 w-96 bg-white">
+					<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
+				</div>
+				<div
+					class="flex hidden overscroll-contain left-0 justify-center items-center mt-10 w-96 text-2xl text-gray-800 rounded-xl border shadow-lg font-display h-screen-8/10"
+					data-loader-target="loading"
+					style="">
+					Carregando
+					<svg data-loader-target="onIcon" class="ml-2 w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path fill="none" d="M0 0h24v24H0V0z"/>
+						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+					</svg>
+				</div>
+			</div>
+			<%= render LeftSidebar::CalendarComponent.new(events:     @liked_events,
+																										start_date: Date.today,
+																										user:       current_user,
+																										filter:     false,
+																										indicators: @indicators) %>
 		</section>
 	<% end %>
 </div>
